--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mini Poki</title>
   <style>
     body {
@@ -47,12 +47,28 @@
 
     .game-screen {
       display: none;
-      padding: 2rem;
-      text-align: center;
+      padding: 1rem;
     }
 
     .game-screen.active {
       display: block;
+    }
+
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+      border-radius: 8px;
+    }
+
+    .back-btn {
+      display: inline-block;
+      margin: 1rem 0;
+      padding: 0.5rem 1rem;
+      background: #00bcd4;
+      color: white;
+      border-radius: 4px;
+      text-decoration: none;
     }
 
     footer {
@@ -61,68 +77,56 @@
       background: #eee;
       font-size: 0.9rem;
     }
-
-    .back-btn {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      background: #00bcd4;
-      color: white;
-      border-radius: 4px;
-      text-decoration: none;
-    }
   </style>
 </head>
 <body>
+
   <header>
     <h1>Mini Poki</h1>
   </header>
 
-  <!-- Homepage Grid -->
+  <!-- Game Grid -->
   <main id="home" class="game-grid">
     <a href="#" class="game-card" onclick="openGame('game1')">
-      <img src="https://via.placeholder.com/150x100.png?text=Game+1" alt="Game 1" />
-      <h2>Game 1</h2>
+      <img src="https://via.placeholder.com/150x100.png?text=Flappy+Bird" alt="Flappy Bird" />
+      <h2>Flappy Bird</h2>
     </a>
     <a href="#" class="game-card" onclick="openGame('game2')">
-      <img src="https://via.placeholder.com/150x100.png?text=Game+2" alt="Game 2" />
-      <h2>Game 2</h2>
+      <img src="https://via.placeholder.com/150x100.png?text=2048" alt="2048" />
+      <h2>2048</h2>
     </a>
-    <!-- Add more games if you want -->
   </main>
 
-  <!-- Game Screens -->
+  <!-- Game 1: Flappy Bird Clone -->
   <div id="game1" class="game-screen">
-    <h1>Game 1</h1>
-    <p>This is a placeholder for Game 1.</p>
+    <h1>Flappy Bird</h1>
+    <iframe src="https://flappybird.io/"></iframe>
     <a href="#" class="back-btn" onclick="goHome()">← Back to Home</a>
   </div>
 
+  <!-- Game 2: 2048 -->
   <div id="game2" class="game-screen">
-    <h1>Game 2</h1>
-    <p>This is a placeholder for Game 2.</p>
+    <h1>2048</h1>
+    <iframe src="https://play2048.co/"></iframe>
     <a href="#" class="back-btn" onclick="goHome()">← Back to Home</a>
   </div>
 
   <footer>
-    <p>Made by You — Poki-style clone</p>
+    <p>Mini Poki clone — Made by You</p>
   </footer>
 
   <script>
     function openGame(gameId) {
       document.getElementById('home').style.display = 'none';
-      document.querySelectorAll('.game-screen').forEach(el => {
-        el.classList.remove('active');
-      });
+      document.querySelectorAll('.game-screen').forEach(screen => screen.classList.remove('active'));
       document.getElementById(gameId).classList.add('active');
     }
 
     function goHome() {
-      document.querySelectorAll('.game-screen').forEach(el => {
-        el.classList.remove('active');
-      });
+      document.querySelectorAll('.game-screen').forEach(screen => screen.classList.remove('active'));
       document.getElementById('home').style.display = 'grid';
     }
   </script>
+
 </body>
 </html>
