--- a/index.html
+++ b/index.html
@@ -95,9 +95,13 @@
       <img src="https://via.placeholder.com/150x100.png?text=2048" alt="2048" />
       <h2>2048</h2>
     </a>
+    <a href="#" class="game-card" onclick="openGame('game3')">
+      <img src="https://upload.wikimedia.org/wikipedia/en/5/59/Clash_Royale_logo.png" alt="Clash Royale" />
+      <h2>Clash Royale Clone</h2>
+    </a>
   </main>
 
-  <!-- Game 1: Flappy Bird Clone -->
+  <!-- Game 1: Flappy Bird -->
   <div id="game1" class="game-screen">
     <h1>Flappy Bird</h1>
     <iframe src="https://flappybird.io/"></iframe>
@@ -111,8 +115,15 @@
     <a href="#" class="back-btn" onclick="goHome()">← Back to Home</a>
   </div>
 
+  <!-- Game 3: Clash Royale Clone -->
+  <div id="game3" class="game-screen">
+    <h1>Clash Royale Clone</h1>
+    <iframe src="https://clashroyale.io/"></iframe>
+    <a href="#" class="back-btn" onclick="goHome()">← Back to Home</a>
+  </div>
+
   <footer>
-    <p>Mini Poki clone — Made by You</p>
+    <p>Made by Arlo</p>
   </footer>
 
   <script>
