--- a/index.html
+++ b/index.html
@@ -1,143 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mini Poki</title>
+  <title>Mini Clash Royale Demo</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #f2f2f2;
+      font-family: Arial, sans-serif;
+      background: #e0f7fa;
+      margin: 0; padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      height: 100vh;
     }
-
     header {
-      background-color: #00bcd4;
+      background: #00796b;
       color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    .game-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-      gap: 1rem;
-      padding: 1rem;
-    }
-
-    .game-card {
-      background: white;
-      border-radius: 8px;
-      text-align: center;
-      text-decoration: none;
-      color: black;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      transition: transform 0.2s;
-    }
-
-    .game-card:hover {
-      transform: scale(1.05);
-    }
-
-    .game-card img {
-      max-width: 100%;
-      border-top-left-radius: 8px;
-      border-top-right-radius: 8px;
-    }
-
-    .game-screen {
-      display: none;
-      padding: 1rem;
-    }
-
-    .game-screen.active {
-      display: block;
-    }
-
-    iframe {
       width: 100%;
-      height: 600px;
-      border: none;
-      border-radius: 8px;
-    }
-
-    .back-btn {
-      display: inline-block;
-      margin: 1rem 0;
-      padding: 0.5rem 1rem;
-      background: #00bcd4;
-      color: white;
-      border-radius: 4px;
-      text-decoration: none;
-    }
-
-    footer {
-      text-align: center;
       padding: 1rem;
-      background: #eee;
-      font-size: 0.9rem;
+      text-align: center;
     }
-  </style>
-</head>
-<body>
-
-  <header>
-    <h1>Mini Poki</h1>
-  </header>
-
-  <!-- Game Grid -->
-  <main id="home" class="game-grid">
-    <a href="#" class="game-card" onclick="openGame('game1')">
-      <img src="https://via.placeholder.com/150x100.png?text=Flappy+Bird" alt="Flappy Bird" />
-      <h2>Flappy Bird</h2>
-    </a>
-    <a href="#" class="game-card" onclick="openGame('game2')">
-      <img src="https://via.placeholder.com/150x100.png?text=2048" alt="2048" />
-      <h2>2048</h2>
-    </a>
-    <a href="#" class="game-card" onclick="openGame('game3')">
-      <img src="https://upload.wikimedia.org/wikipedia/en/5/59/Clash_Royale_logo.png" alt="Clash Royale" />
-      <h2>Clash Royale Clone</h2>
-    </a>
-  </main>
-
-  <!-- Game 1: Flappy Bird -->
-  <div id="game1" class="game-screen">
-    <h1>Flappy Bird</h1>
-    <iframe src="https://flappybird.io/"></iframe>
-    <a href="#" class="back-btn" onclick="goHome()">← Back to Home</a>
-  </div>
-
-  <!-- Game 2: 2048 -->
-  <div id="game2" class="game-screen">
-    <h1>2048</h1>
-    <iframe src="https://play2048.co/"></iframe>
-    <a href="#" class="back-btn" onclick="goHome()">← Back to Home</a>
-  </div>
-
-  <!-- Game 3: Clash Royale Clone -->
-  <div id="game3" class="game-screen">
-    <h1>Clash Royale Clone</h1>
-    <iframe src="https://clashroyale.io/"></iframe>
-    <a href="#" class="back-btn" onclick="goHome()">← Back to Home</a>
-  </div>
-
-  <footer>
-    <p>Made by Arlo</p>
-  </footer>
-
-  <script>
-    function openGame(gameId) {
-      document.getElementById('home').style.display = 'none';
-      document.querySelectorAll('.game-screen').forEach(screen => screen.classList.remove('active'));
-      document.getElementById(gameId).classList.add('active');
+    #battlefield {
+      margin-top: 20px;
+      width: 600px;
+      height: 300px;
+      background: #004d40;
+      border-radius: 10px;
+      position: relative;
+      overflow: hidden;
     }
-
-    function goHome() {
-      document.querySelectorAll('.game-screen').forEach(screen => screen.classList.remove('active'));
-      document.getElementById('home').style.display = 'grid';
+    .unit {
+      width: 80px;
+      height: 80px;
+      position: absolute;
+      bottom: 50px;
+      border-radius: 10px;
+      text-align: center;
+      color: white;
+      font-weight: bold;
+      line-height: 80px;
+      user-select: none;
     }
-  </script>
-
-</body>
-</html>
+    #unit1 {
+      background: #ff7043;
+      left: 50px;
+      animation: moveRight 2s infinite alternate;
+    }
+    #unit2 {
+      background: #42a5
